plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pdf.merge'
version = '0.0.1-SNAPSHOT'
description = 'Pdf merge  project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}


dependencies {
	// 🌐 Spring WebFlux for reactive REST API
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'org.apache.pdfbox:pdfbox:2.0.31'
	implementation 'org.apache.commons:commons-io:1.3.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.14'

	// (Optional but recommended) — Logging
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	// ✅ Reactor Core (comes transitively with WebFlux, but explicit for clarity)
	implementation 'io.projectreactor:reactor-core'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

    // 🧪 For unit tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

